add stock moniter and send msg to telegram
